--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,7 +1,7 @@
 HELP.md
 .gradle
 /build/
-/src/main/resources/static/
+#/src/main/resources/static/
 !gradle/wrapper/gradle-wrapper.jar
 
 ### STS ###
